--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -200,7 +200,7 @@
                     <span>Kundenkonto</span>
                 </a>
             </div>
-            <div class="header__center-catr">
+            <div class="header__center-cart">
                 <a href="">
                     <svg xmlns="http://www.w3.org/2000/svg" width="48.499" height="43.109" viewBox="0 0 48.499 43.109">
                         <path id="shopping-cart"
@@ -208,7 +208,7 @@
                     </svg>
                     <span>Warenkorb</span>
                 </a>
-                <span class="quantity">0</span>
+                <span class="cart__quantity">0</span>
             </div>
         </div>
     </div>
