--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -266,7 +266,8 @@
                             </span>
                             <span class="text">Farben</span>
                             <ul class="sub__menu">
-                                <li class="sub__menu-item"><a href=""><span class="text">Innenfarben</span></a></li>
+                                <li class="sub__menu-item"><a href="" aria-current="page"><span
+                                            class="text">Innenfarben</span></a></li>
                                 <li class="sub__menu-item"><a href=""><span class="text">Fassadenfarben</span></a></li>
                                 <li class="sub__menu-item"><a href=""><span class="text">Holzlasuren /
                                             Holzfarben</span></a></li>
