--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -346,7 +346,8 @@
                             </span>
                             <span class="text">Kategorie XY</span>
                         </a></li>
-                    <li class="menu__item"><a href="">
+                    <li class="menu__item">
+                        <a href="">
                             <span class="icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="7" height="6" viewBox="0 0 7 6">
                                     <path id="Многоугольник_2" data-name="Многоугольник 2" d="M3.5,0,7,6H0Z"
@@ -358,9 +359,31 @@
                         <ul class="sub__menu">
                             <li class="sub__menu-item"><a href=""><span class="text">Innenfarben</span></a></li>
                             <li class="sub__menu-item"><a href=""><span class="text">Fassadenfarben</span></a></li>
-                            <li class="sub__menu-item"><a href=""><span class="text">Holzlasuren / Holzfarben</span></a>
+                            <li class="sub__menu-item"><a href=""><span class="text">Holzlasuren /
+                                        Holzfarben</span></a>
                             </li>
-                            <li class="sub__menu-item"><a href=""><span class="text">Unterkategorie XY</span></a></li>
+                            <li class="sub__menu-item"><a href=""><span class="text">Unterkategorie XY</span></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu__item">
+                        <a href="">
+                            <span class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="7" height="6" viewBox="0 0 7 6">
+                                    <path id="Многоугольник_2" data-name="Многоугольник 2" d="M3.5,0,7,6H0Z"
+                                        transform="translate(7 6) rotate(180)" fill="#fff" />
+                                </svg>
+                            </span>
+                            <span class="text">Mehr</span>
+                        </a>
+                        <ul class="sub__menu">
+                            <li class="sub__menu-item"><a href=""><span class="text">Innenfarben</span></a></li>
+                            <li class="sub__menu-item"><a href=""><span class="text">Fassadenfarben</span></a></li>
+                            <li class="sub__menu-item"><a href=""><span class="text">Holzlasuren /
+                                        Holzfarben</span></a>
+                            </li>
+                            <li class="sub__menu-item"><a href=""><span class="text">Unterkategorie XY</span></a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
